@@ -6,6 +6,10 @@ Note: This file contains only changes in the 'default' branch.
 
 2018-04-02
 
+  - Fixed #193: Removed the broken Google Finance price source importer. Google
+    has removed this service in the favor of a special Search page and this has
+    been broken for the recent little while.
+
   - Fixed #203: Updated the Yahoo price source implementation to use the
     undocumented v7 and v8 APIs; moved away from the "ichart" and "download"
     APIs. The Yahoo importer is back in function.
